Kubernetes/manifests/project/blog_minikube_simple/blog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
  - port: 5000
    targetPort: 5000
